# ChangeLog for net-im/pidgin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.86 2009/03/04 23:53:29 tester Exp $

*pidgin-2.5.5 (04 Mar 2009)

  04 Mar 2009; Olivier Crête <tester@gentoo.org>
  files/pidgin-2.5.4-icq.patch, pidgin-2.5.4.ebuild, pidgin-2.5.4-r1.ebuild,
  +pidgin-2.5.5.ebuild:
  Version bump, update ICQ patch, remove gnome2.eclass EAPI 2 compat code

  20 Feb 2009; Olivier Crête <tester@gentoo.org>
  +files/pidgin-2.5.4-icq-messages-magic.patch, pidgin-2.5.4-r1.ebuild:
  Add patch for ICQ charset stuff, bug #235541

*pidgin-2.5.4-r1 (08 Feb 2009)

  08 Feb 2009; Timothy Redaelli <drizzt@gentoo.org>
  +files/pidgin-2.5.4-icq.patch, +pidgin-2.5.4-r1.ebuild:
  Fix ICQ (for protocol changes) Thanks to MaratIK for reporting wrt bug
  #257570

  21 Jan 2009; Olivier Crête <tester@gentoo.org> pidgin-2.5.4.ebuild:
  Remove autotools dep

  20 Jan 2009; Ferris McCormick <fmccor@gentoo.org> pidgin-2.5.4.ebuild:
  Add back ~sparc --- Bug #255579 --- we p.use.masked zephyr because we don't
  want krb4.

  20 Jan 2009; Olivier Crête <tester@gentoo.org> pidgin-2.5.4.ebuild:
  Use gtk by default

*pidgin-2.5.4 (20 Jan 2009)

  20 Jan 2009; Olivier Crête <tester@gentoo.org> +pidgin-2.5.4.ebuild:
  Version bump using eapi 2

  04 Jan 2009; Jeroen Roovers <jer@gentoo.org> pidgin-2.5.2.ebuild:
  Stable for HPPA (bug #248137).

  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org> pidgin-2.5.2.ebuild:
  ppc stable, bug #248137

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> pidgin-2.5.2.ebuild:
  ia64 stable wrt #248137

*pidgin-2.5.3 (26 Dec 2008)

  26 Dec 2008; Olivier Crête <tester@gentoo.org> +pidgin-2.5.3.ebuild:
  Version bump

  25 Dec 2008; Friedrich Oslage <bluebird@gentoo.org> pidgin-2.5.2.ebuild:
  Stable on sparc, bug #248137

  25 Dec 2008; Tobias Klausmann <klausman@gentoo.org> pidgin-2.5.2.ebuild:
  Stable on alpha, bug #248137
