@@ -6,11 +6,11 @@ DIST pidgin-2.5.2.tar.bz2 8059006 RMD160 fe27ecce5ada1664de9e260b863b9b4940de75a
 DIST pidgin-2.5.3.tar.bz2 8393073 RMD160 c139b2746f2557f5f132e6460f5bff7009fd8259 SHA1 bd3f6eca0a0c9b221be8a664e904450db8589314 SHA256 912c934425fc40535fc79eb9082f6f823808d8ea8ecdd370d0b8ceec4b97ad82
 DIST pidgin-2.5.4.tar.bz2 8398610 RMD160 13f9e27e00e73a02b18f967fcf722a0c511569e5 SHA1 80f7a9e311d4ed6f2438f2ee16a4bdc66edcc2ad SHA256 c6bebef97b8b337cd2bc8107b3714dedf60d02db70487d0aafdd8b5b7ada1b63
 DIST pidgin-2.5.5.tar.bz2 8357209 RMD160 b7d37b73b9cced0f399cbc233c7ee0cdcf33e582 SHA1 a99ef50504b2b5f4014bfad232957322829d568f SHA256 cb5a13b99c2868b61d7f790678e1b3d3055eb9bf56c369a0eab90aa3fa7723e8
-EBUILD pidgin-2.5.1.ebuild 5269 RMD160 37de25121113a8166e25aabec98dd141dae1228e SHA1 6d41ffca1892599d2660d3ea5a96d19710d7351e SHA256 bfa4c83fcb3c6f99566eb8ca574746bb17fe65dc97f8b0a97f486349334f9845
-EBUILD pidgin-2.5.2.ebuild 5396 RMD160 1dfa829b3b7493b6dcc7ad4d94659009cbd44f3e SHA1 856ae722c2185ac4aac6a4915516e0eeccb7ae65 SHA256 863131df65374282be975d6a2834b80eb882159585ef76d6484f0f08daf9499a
-EBUILD pidgin-2.5.3.ebuild 5303 RMD160 b1296b57b9ae19908774dc4adfb301f855ccaf22 SHA1 a7afe68a013ff050cbd0ffb76ea17502aa41614a SHA256 b34f297f3b3840a837ae8a44538c14ed7cca8e9a18a81f2c2b72b9ac74aa3d0d
+EBUILD pidgin-2.5.1.ebuild 4550 RMD160 6f9f89ee3fb3664ac71d182a45a720a1ef4ff211 SHA1 0b01a4357f62d55510ba23db27a964cd8042a81a SHA256 cbc48f65733893926f22261654ed5b0d8f353ad88bbbc6fb583feff8243da470
+EBUILD pidgin-2.5.2.ebuild 4676 RMD160 5b6b8f95a1fcd54c7825bfd0461d6520d1c56d85 SHA1 139e113bf2364c549241e22a3164000077c8d50b SHA256 03d7e65a799902d203657cefc7fa36daaa7c45afcbbcce0fad2dcab62bf7d3c1
+EBUILD pidgin-2.5.3.ebuild 4580 RMD160 79105a575956d82f8c5804106a03f9dce435a9ce SHA1 d516b776f5e30e6cdf4761b53931779ea3ce24f2 SHA256 5cdac88a406fed564c533b4d2fa35884180341a3b6f22f6dc9ef3f26d0d431f8
 EBUILD pidgin-2.5.4-r1.ebuild 4637 RMD160 2920930870a89ba788fb5a9121bec8dada118d39 SHA1 99dff869a88886b785729b3141bd2fc51795ace0 SHA256 e53c0da506035b020c2bc3498007480bc4f495b64e112a57253e29bba5d85b00
 EBUILD pidgin-2.5.4.ebuild 4526 RMD160 20c254b79ceb63d78d9e5f54f0eea34fd8c31d9a SHA1 7a491a769fa6c199ac74f34d061f3b828c356549 SHA256 773ead022a19051be9a275163e36bd4b6eaf6cbd2f09cda3abb07903e1937c30
 EBUILD pidgin-2.5.5.ebuild 4589 RMD160 236378401fced0221aa7c6759671e3f26bab422a SHA1 e44af92f0923d21070cf76faac06a180fc8593ea SHA256 4929ad5a434b1e6495554557865575b9f2095803b24f26e8cd7db5143444fda2
-MISC ChangeLog 11940 RMD160 6f496079711fad4fcea218cadd3daab94ab89d82 SHA1 ebde84398e284de49f9b747b3430518a62c00907 SHA256 20d51005ca6311cef1d38faa16a5da7e6f0e309e0a820474c5ccac53b028779a
+MISC ChangeLog 12099 RMD160 18719060a6bcbabd56d8e983526cf65ae4fc7930 SHA1 36c67db2e8540c05fb07cd4ca2307077ba6a6449 SHA256 44c8d7e80e194fa8391ebf8d3280952ba796e0aac9ae7cdd7bf76d0c8e56dc90
 MISC metadata.xml 989 RMD160 7d97c83fcb6e8189dabc908c7c4b12ebf16b7ccc SHA1 a0faafa7c0d1c8835141709e61c6205c503481bb SHA256 4f5d2e541300302662d3fcec49b74723ff00c4803cf88e522545dc9f3e0cad0f
