@@ -1,11 +1,9 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/pidgin-2.5.2.ebuild,v 1.8 2009/01/04 08:41:19 jer Exp $
-
-EAPI="prefix"
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/pidgin-2.5.2.ebuild,v 1.9 2009/03/07 20:36:17 gentoofan23 Exp $
 
 WANT_AUTOMAKE="1.9"
-
+EAPI="prefix 2"
 inherit flag-o-matic eutils toolchain-funcs multilib perl-app gnome2 autotools
 
 DESCRIPTION="GTK Instant Messenger client"
@@ -34,17 +32,18 @@ RDEPEND="
 	gstreamer? ( =media-libs/gstreamer-0.10*
 		=media-libs/gst-plugins-good-0.10* )
 	perl? ( >=dev-lang/perl-5.8.2-r1 )
-	gadu?  ( net-libs/libgadu )
+	gadu?  ( net-libs/libgadu[-ssl] )
 	gnutls? ( net-libs/gnutls )
 	!gnutls? ( >=dev-libs/nss-3.11 )
 	meanwhile? ( net-libs/meanwhile )
 	silc? ( >=net-im/silc-toolkit-0.9.12-r3 )
-	zephyr? ( >=app-crypt/mit-krb5-1.3.6-r1 )
+	zephyr? ( >=app-crypt/mit-krb5-1.3.6-r1[krb4] )
 	tcl? ( dev-lang/tcl )
 	tk? ( dev-lang/tk )
 	sasl? ( >=dev-libs/cyrus-sasl-2 )
 	dev-libs/libxml2
 	networkmanager? ( net-misc/networkmanager )
+	ncurses? ( sys-libs/ncurses[unicode] )
 	prediction? ( =dev-db/sqlite-3* )"
 	# Mono support crashes pidgin
 	#mono? ( dev-lang/mono )"
@@ -75,37 +74,12 @@ DYNAMIC_PRPLS="irc,jabber,oscar,yahoo,simple,msn,myspace"
 #   x11-themes/pidgin-smileys
 
 pkg_setup() {
-	if use gadu && built_with_use net-libs/libgadu ssl ; then
-	eerror
-	eerror "You need to rebuild net-libs/libgadu with USE=-ssl in order"
-	eerror "enable gadu gadu support in pidgin."
-	eerror
-	die "Configure failed"
-	fi
-
-	if use ncurses &&  ! built_with_use sys-libs/ncurses unicode; then
-		eerror
-		eerror "You need to rebuild sys-libs/ncurses with USE=unicode in order"
-		eerror "to build finch the console client of pidgin."
-		eerror
-		die "Configure failed"
-	fi
-
 	if ! use gtk && ! use ncurses ; then
 		einfo
 		elog "You did not pick the ncurses or gtk use flags, only libpurple"
 		elog "will be built."
 		einfo
 	fi
-
-	if use zephyr && ! built_with_use app-crypt/mit-krb5 krb4 ; then
-		eerror
-		eerror "You need to rebuild app-crypt/mit-krb5 with USE=krb4 in order to"
-		eerror "enable krb4 support for the zephyr protocol in pidgin"
-		eerror
-		die "Configure failed"
-	fi
-
 }
 
 src_unpack() {
@@ -116,7 +90,7 @@ src_unpack() {
 	eautomake
 }
 
-src_compile() {
+src_configure() {
 	# Stabilize things, for your own good
 	strip-flags
 	replace-flags -O? -O2
@@ -191,10 +165,8 @@ src_compile() {
 		"--with-dynamic-prpls=${DYNAMIC_PRPLS}" \
 		--disable-mono \
 		--x-includes="${EPREFIX}/usr/include/X11" \
-		${myconf} || die "Configuration failed"
+		${myconf}
 		#$(use_enable mono) \
-
-		emake || die "make failed"
 }
 
 src_install() {
